fix: remove whitespace above footer on mobile

--- a/assets/css/src/parts/terraso.scss
+++ b/assets/css/src/parts/terraso.scss
@@ -571,6 +571,10 @@ header.tg-page-header.tg-page-header--left-right {
 
 /* remove whitespace below main content area */
 #primary {
+	&.content-area {
+		margin-bottom: 0;
+	}
+
 	.entry-content {
 		margin-bottom: 0;
 	}
